# Chicago-311

./: .gitignore  README.md  WEATHER_AUGMENTATION_SUMMARY.md  best_models_summary.csv  eda.py  main.py  main_weather_augmented.py  model_comparison_summary.md  pyproject.toml  requirements.txt  results_all_models_n5000.csv  variance_analysis.py
data/raw/: 311_Service_Requests_2020.csv
notebooks/: chicago_311_analysis.ipynb  data_augmentation.ipynb
results/: ablation_results.csv  all_configurations_results.csv  best_models_summary.csv  model_results.csv  model_results_weather.csv  results_all_models_n5000.csv
results/interpretability/: ttest_results.csv  variance_summary.csv
scripts/: ablation_study.py  data_augmentation.py  eda.py  variance_analysis.py
src/: __init__.py  config.py
src/analysis/: simple_analysis.py
src/methods/: __init__.py  baseline.py  evaluation.py  lightgbm_model.py  modeling.py  random_forest_model.py  xgboost_model.py
src/processes/: __init__.py  augment.py  clean.py  split.py  temporal_split.py
src/processing/: __init__.py  clean.py  loaders.py  split.py
src/visualizations/: __init__.py  eda.py  interpretability.py  plots.py
tests/: test_scaffolding.py
