[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicago-311"
version = "0.1.0"
description = "Chicago 311 service request analysis and response time prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
